@@ -1132,5 +1132,13 @@ describe "AwesomeNestedSet" do
       root = Category.root
       expect { root.destroy! }.to raise_error  ActiveRecord::DeleteRestrictionError, 'Cannot delete record because of dependent children'
     end
+
+    it 'restrict_with_error adds the error to the model' do
+      Category.acts_as_nested_set_options[:dependent] = :restrict_with_error
+      root = Category.root
+      root.destroy
+      assert_equal ["Cannot delete record because dependent children exist"], root.errors[:base]
+    end
+
   end
 end
